# test_task

./: .env  Makefile  README.md  docker-compose.yml  pyproject.toml  redis.conf
alembic/: env.py
alembic/versions/: b9bbc2846d6d_init.py
api/: Dockerfile  fill_db.py  main.py  start.sh
api/app/api/: router.py
api/app/api/v1/: __init__.py  deps.py  users.py
api/app/core/: __init__.py  config.py
api/app/crud/: base.py  user.py
api/app/database/: database.py
api/app/models/: __init__.py  base.py  user.py
api/app/schemas/: __init__.py  base.py  user.py
api/app/services/: user_service.py
api/app/uow/: __init__.py  unit_of_work.py
bot/: Dockerfile  main.py
bot/core/: config.py
bot/handlers/: create_user.py  delete_user.py  list_users.py  start_command.py
bot/schemas/: user.py
bot/services/: api_client.py
bot/states/: user_states.py
