[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'test_task'
version = "0.1.0"
description = "Test task"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
]

bot = [
    "aiogram>=3.0.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
]

dev = [
    "pytest",
    "ruff"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "alembic", "migrations"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90", "B", "UP"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"